--- a/ruby-numerals/app/views/layouts/application.html.erb
+++ b/ruby-numerals/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RubyNumerals</title>
+  <title>Ruby Numerals - K.Rudy</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
