--- a/ruby-numerals/app/views/numerals/index.html.erb
+++ b/ruby-numerals/app/views/numerals/index.html.erb
@@ -1,1 +1,23 @@
-NUMERALS
+<div class="container">
+  
+  <h1>Simple Numerals Converter</h1>
+  
+  <%= form_tag convert_numerals_path, role: 'form' do %>
+  
+    <div class="form-group">
+      <%= label_tag :number %>
+      <%= text_field_tag :number, params[:number], type: 'number', class: 'form-control', placeholder: 'Enter number' %>
+    </div>
+  
+    <%= submit_tag 'Submit', class: 'btn btn-default' %>
+    
+  <% end %>
+  
+  <% if @result %>
+    <p class="bg-primary"><%= @result %></p>
+  <% end %>
+  
+  <% if flash[:error] %>
+    <p class="bg-danger"><%= flash[:error] %></p>
+  <% end %>
+</div>
